--- a/src/main/webapp/resources/css/mypage/order_history.css
+++ b/src/main/webapp/resources/css/mypage/order_history.css
@@ -25,7 +25,7 @@
   font-size: 10px;
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+#customers tr:nth-child(even){background-color: #ffffff;}
 
 #customers tr:hover {background-color: #ddd;}
 
