--- a/src/main/webapp/resources/css/review/review_list.css
+++ b/src/main/webapp/resources/css/review/review_list.css
@@ -19,7 +19,7 @@
   font-size: 15px;
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+#customers tr:nth-child(even){background-color: #ffffff;}
 
 #customers tr:hover {background-color: #ddd;}
 
@@ -30,10 +30,6 @@
   color: white;
 }
 
-#customers td {
- border-right: none;
- border-left: none;
-}
 
 #customers a{
 	color: #000;
